{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 129,
  "lineage": "f737757a-3489-2b5c-1eed-feb93c02c9cc",
  "resources": [
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:subnet/subnet-0ab5c677e117c2fb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab5c677e117c2fb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522838200446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-privateSubnet-1"
            },
            "tags_all": {
              "Name": "development-privateSubnet-1"
            },
            "vpc_id": "vpc-0e5e6e3666915568a"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:subnet/subnet-076655c36ea50c939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076655c36ea50c939",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522838200446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-privateSubnet-2"
            },
            "tags_all": {
              "Name": "development-privateSubnet-2"
            },
            "vpc_id": "vpc-0e5e6e3666915568a"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:vpc/vpc-0e5e6e3666915568a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba5b7007bd0d0ce6",
            "default_route_table_id": "rtb-03910276505afd774",
            "default_security_group_id": "sg-0712ce9157b96e238",
            "dhcp_options_id": "dopt-d666a6ac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e5e6e3666915568a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03910276505afd774",
            "owner_id": "522838200446",
            "tags": {
              "Name": "development-vpc"
            },
            "tags_all": {
              "Name": "development-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-dev-configs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "customer_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:vpc/vpc-0e5e6e3666915568a",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fcb7c42952775785",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-d666a6ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e5e6e3666915568a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03910276505afd774",
            "owner_id": "522838200446",
            "tags": {
              "Name": "development-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-manage",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-manage",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-manage",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc-manage",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc-manage",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-manage",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-manage",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-manage",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-manage-configs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "customer_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}